--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 # https://github.com/UCSB-AMPLab/telar
 
 # Site Settings
-title: Telar
+title: A.I. for Historians
 description: "Telar (Spanish for 'loom') is a static site generator built on Jekyll that weaves together IIIF images, text, and layered contextual information into interactive digital narrative exhibitions. <a href='https://github.com/UCSB-AMPLab/telar'>Telar</a> is a project of <a href='https://neogranadina.org'>Neogranadina</a> and the Archives, Memory, and Preservation Labs at <a href='https://ampl.clair.ucsb.edu/'>UC Santa Barbara</a> and <a href='https://liberalarts.utexas.edu/history/'>UT Austin</a>."
-baseurl: "/telar"
-url: "https://ampl.clair.ucsb.edu"
+baseurl: "/aiforhistory"
+url: "https://avierath.github.io"
 author: ""
 email: ""
 telar_theme: "paisajes" # Options: paisajes, neogranadina, santa-barbara, austin, or custom
