Enabled demo content

--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ google_sheets:
 # Story Interface Settings
 story_interface:
   show_story_steps: true # Set to false to hide "Step X" overlay in stories
-  include_demo_content: false # v0.5.0 feature - demo stories from external repository
+  include_demo_content: true # v0.5.0 feature - demo stories from external repository
 
 
 #
