Reset to Telar v0.6.0-beta (preserve user site metadata)

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ telar_language: "en" # Options: "en" (English), "es" (Español)
 story_interface:
   show_story_steps: true # Set to false to hide "Step X" overlay in stories
   show_object_credits: true # Set to true to display object credits badge (bottom-left corner, dismissable)
-  include_demo_content: false # Fetch demo stories from content.telar.org. Switch this off to hide demo stories and their content.
+  include_demo_content: true # Fetch demo stories from content.telar.org. Switch this off to hide demo stories and their content.
 
 # Google Sheets Integration (optional)
 # Manage content via Google Sheets instead of editing CSV files directly.
@@ -56,6 +56,9 @@ collections:
   glossary:
     output: true
     permalink: /glossary/:name/
+  pages:
+    output: true
+    permalink: /:name/
 
 # Collections Directory (a folder where Jekyll and the Telar scripts will put all auto-generated object and story working files)
 collections_dir: _jekyll-files
@@ -90,6 +93,11 @@ defaults:
       type: "glossary"
     values:
       layout: "glossary"
+  - scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: "user-page"
 
 # Tell Jekyll not to expect dates for these collections
 future: true
@@ -98,7 +106,7 @@ show_drafts: false
 # Telar Settings (version information)
 telar:
   version: "0.6.0-beta"
-  release_date: "2025-11-29"
+  release_date: "2025-11-28"
 
 # Plugins
 plugins:
