--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 # https://github.com/UCSB-AMPLab/telar
 
 # Site Settings
-title: A.I. for Historians
-description: "Telar (Spanish for 'loom') is a static site generator built on Jekyll that weaves together IIIF images, text, and layered contextual information into interactive digital narrative exhibitions. <a href='https://github.com/UCSB-AMPLab/telar'>Telar</a> is a project of <a href='https://neogranadina.org'>Neogranadina</a> and the Archives, Memory, and Preservation Labs at <a href='https://ampl.clair.ucsb.edu/'>UC Santa Barbara</a> and <a href='https://liberalarts.utexas.edu/history/'>UT Austin</a>."
+title: AI for Historians
+description: Demystifying AI for historians
 baseurl: "/aiforhistory"
 url: "https://avierath.github.io"
 author: ""
@@ -16,7 +16,7 @@ telar_language: "en" # Options: "en" (English), "es" (Español)
 story_interface:
   show_story_steps: true # Set to false to hide "Step X" overlay in stories
   show_object_credits: true # Set to true to display object credits badge (bottom-left corner, dismissable)
-  include_demo_content: true # Fetch demo stories from content.telar.org. Switch this off to hide demo stories and their content.
+  include_demo_content: false # Fetch demo stories from content.telar.org. Switch this off to hide demo stories and their content.
 
 # Google Sheets Integration (optional)
 # Manage content via Google Sheets instead of editing CSV files directly.
